[package]
name = "spaceapi-matrix-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.4", features = ["derive", "env"] }
matrix-client-boilerplate = { git = "https://github.com/DanNixon/matrix-client-boilerplate" }
matrix-sdk = { version = "0.6.2", features = ["markdown"] }
mqtt-channel-client = { version = "0.5.0", features = ["metrics"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.97"
spaceapi = "0.9.0"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
