[package]
name = "spaceapi-matrix-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive", "env"] }
matrix-client-boilerplate = { git = "https://github.com/DanNixon/matrix-client-boilerplate" }
matrix-sdk = { version = "0.6.2", features = ["markdown"] }
mqtt-channel-client = { version = "0.6.0", features = ["metrics"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde_json = "1.0.113"
spaceapi = "0.9.0"
thiserror = "1.0.56"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
